Add air quality data from BeeHub
Both in Snakefile and data manifest.

--- a/data/data_manifest.yml
+++ b/data/data_manifest.yml
@@ -8,6 +8,14 @@
             - README.txt
           resources:
             - woodprod_average.tif
+  - provider: eg
+    collections:
+      - air_quality:
+          category: ecosystemservices
+          metadata:
+            - README.md
+          resources:
+            - air_quality.tif
   - provider: provide
     collections:
       - carbon_sequestration:
